--- a/client/src/style.css
+++ b/client/src/style.css
@@ -23,11 +23,33 @@ body {
 
 .Collapsible__trigger {
     margin: 0;
-    padding: 0 46%;
+    padding: 0 40%;
     cursor: pointer;
 }
 
 .Collapsible__contentInner {
     background-color: #383838;
     color: #fff;
+}
+
+#movieForm {
+    display: flex;
+    border: 1px solid #0e0e0e;
+}
+
+.list-form input[type='text'] {
+    width: 80%;
+    display: block;
+    padding: 0.25rem;
+    font-size: 1.5rem;
+}
+
+.list-form input[type='submit'] {
+    width: 20%;
+    display: block;
+    cursor: pointer;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 3px;
+    background-color: #4bca81;
 }
