--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -30,6 +33,7 @@ body {
 .Collapsible__contentInner {
     background-color: #383838;
     color: #fff;
+    font-size: 2rem;
 }
 
 #movieForm {
