--- a/client/src/style.css
+++ b/client/src/style.css
@@ -59,7 +59,7 @@ body i {
     font-size: 1.5rem;
     border: none;
     border-radius: 3px;
-    background-color: #4bca81;
+    background-color: #5cb85c;
 }
 
 ul li {
@@ -71,8 +71,10 @@ ul li {
 .edit-icon {
     margin-right: 1rem;
     cursor: pointer;
+    color: #f0ad4e;
 }
 
 .delete-icon {
     cursor: pointer;
+    color: #d9534f;
 }
