--- a/client/src/style.css
+++ b/client/src/style.css
@@ -84,3 +84,8 @@ ul li {
     padding: 0.25rem;
     background-color: #4e4e4e;
 }
+
+.tvshows-grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+}
