--- a/client/src/style.css
+++ b/client/src/style.css
@@ -97,6 +97,7 @@ ul li {
 .current-edit {
     padding: 0.25rem;
     background-color: #4e4e4e;
+    border: 1px solid #2e2e2e;
 }
 
 .tvshows-grid-container {
