--- a/client/src/style.css
+++ b/client/src/style.css
@@ -100,7 +100,7 @@ ul li {
     border: 1px solid #2e2e2e;
 }
 
-.tvshows-grid-container {
+.shows-grid-container {
     display: grid;
     grid-template-columns: repeat(4, 25%);
 }
