--- a/client/src/style.css
+++ b/client/src/style.css
@@ -104,3 +104,39 @@ ul li {
     display: grid;
     grid-template-columns: repeat(4, 25%);
 }
+
+/* Navbar */
+nav {
+    height: 3.5rem;
+    background-color: #282828;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #0e0e0e;
+    margin-bottom: 5rem;
+}
+
+nav img {
+    height: 3rem;
+    margin: 0 1rem;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+}
+
+nav ul li {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    list-style: none;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+nav ul li a:hover {
+    color: #00aaff;
+}
