--- a/client/src/style.css
+++ b/client/src/style.css
@@ -114,17 +114,31 @@ ul li {
 
 /* Navbar */
 nav {
-    height: 3.5rem;
+    height: 4rem;
     background-color: #282828;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #0e0e0e;
     margin-bottom: 5rem;
 }
 
+nav h1 {
+    color: #fff;
+    font-size: 2.5rem;
+}
+
+nav h1 span {
+    color: #00aaff;
+}
+
+nav i {
+    color: #00aaff;
+    margin: 0 1rem;
+}
+
 nav img {
     height: 3rem;
-    margin: 0 1rem;
 }
 
 nav ul {
