fixed style warning

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -18,10 +18,7 @@ body i {
 }
 
 input[type='text'] {
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     outline: none;
     border: 2px solid #dddddd;
 }
