--- a/client/src/style.css
+++ b/client/src/style.css
@@ -40,6 +40,10 @@ input[type='number']:focus {
     box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
+.watched-list-title {
+    font-size: 2.25rem;
+}
+
 .Collapsible {
     font-size: 2.5rem;
     text-align: center;
@@ -65,7 +69,7 @@ input[type='number']:focus {
 .Collapsible__contentInner {
     background-color: #383838;
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 
 .list-form {
