--- a/client/src/style.css
+++ b/client/src/style.css
@@ -18,14 +18,18 @@ body i {
 }
 
 input[type='text'],
-input[type='number'] {
-    transition: all 0.3s ease-in-out;
+input[type='number'],
+input[type='password'],
+input[type='email'] {
+    transition: all 0.25s ease-in-out;
     outline: none;
     border: 2px solid #dddddd;
 }
 
 input[type='text']:focus,
-input[type='number']:focus {
+input[type='number']:focus,
+input[type='password']:focus,
+input[type='email']:focus {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
     border: 2px solid #00aaff;
 }
@@ -214,9 +218,10 @@ nav ul li a:hover {
 /* Register & Login */
 .form-container {
     width: 60vw;
-    height: 50vh;
+    height: 60vh;
     margin: 5rem auto;
     text-align: center;
+    padding: 1rem;
     background-color: #282828;
     border: 1px solid #0e0e0e;
     -webkit-box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.5);
@@ -232,19 +237,40 @@ nav ul li a:hover {
 .flex-form {
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
 }
 
 .form-group label {
     display: block;
     font-size: 2rem;
     color: #fff;
-    margin: 0.5rem 0;
 }
 
-.form-group input[type='text'] {
+.form-group input[type='text'],
+.form-group input[type='email'],
+.form-group input[type='password'] {
+    margin: 0.5rem 0;
     width: 50%;
     border-radius: 10px;
     border: none;
     font-size: 1.5rem;
     padding: 0.25rem;
+}
+
+.form-group input[type='submit'] {
+    font-size: 1.5rem;
+    padding: 0.75rem;
+    margin-top: 1rem;
+    background-color: #00aaff;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    transition: all 0.3s ease-in-out;
+    border: 2px solid #00aaff;
+}
+
+.form-group input[type='submit']:hover {
+    box-shadow: 0 5px 15px #00aaff40;
+    border: 2px solid #00aaff40;
+    cursor: pointer;
 }
