--- a/client/src/style.css
+++ b/client/src/style.css
@@ -198,6 +198,7 @@ nav ul li a {
     color: #fff;
     cursor: pointer;
     font-weight: bold;
+    transition: all 0.1s ease-in-out;
 }
 
 nav ul li a:hover {
