--- a/client/src/style.css
+++ b/client/src/style.css
@@ -223,6 +223,7 @@ nav ul li a:hover {
     margin: 5rem auto;
     text-align: center;
     padding: 1rem;
+    border-radius: 10px;
     background-color: #282828;
     border: 1px solid #0e0e0e;
     -webkit-box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.5);
@@ -239,6 +240,10 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
+}
+
+.flex-form.login-form {
+    margin: 3rem;
 }
 
 .form-group label {
