--- a/client/src/style.css
+++ b/client/src/style.css
@@ -264,12 +264,13 @@ nav ul li a:hover {
 
 .form-group input[type='submit'] {
     font-size: 1.5rem;
-    padding: 0.75rem;
+    padding: 0.5rem 0.75rem;
     margin-top: 1rem;
+    width: 15%;
     background-color: #00aaff;
     border: none;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 10px;
     transition: all 0.3s ease-in-out;
     border: 2px solid #00aaff;
 }
