--- a/client/src/style.css
+++ b/client/src/style.css
@@ -49,7 +49,11 @@ input[type='email']:focus {
 }
 
 .watched-list-title {
-    font-size: 2.25rem;
+    font-size: 2rem;
+    background-color: #00aaff81;
+    border-bottom: 1px solid #0e0e0e;
+    border-top: 1px solid #0e0e0e;
+    padding: 0.25rem 0;
 }
 
 .Collapsible {
