--- a/client/src/style.css
+++ b/client/src/style.css
@@ -173,10 +173,6 @@ nav h1 {
     font-size: 2.5rem;
 }
 
-nav h1 span {
-    color: #00aaff;
-}
-
 nav i {
     color: #00aaff;
     margin: 0 1rem;
@@ -195,14 +191,17 @@ nav ul li {
     font-size: 1.5rem;
     text-transform: uppercase;
     list-style: none;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    transition: all 0.1s ease-in-out;
 }
 
 nav ul li a {
     text-decoration: none;
     color: #fff;
-    cursor: pointer;
-    font-weight: bold;
     transition: all 0.1s ease-in-out;
+    cursor: pointer;
 }
 
 nav ul li a:hover {
