--- a/client/src/style.css
+++ b/client/src/style.css
@@ -155,6 +155,10 @@ ul li {
     grid-template-columns: repeat(4, 25%);
 }
 
+.shows-grid-container h3 {
+    grid-column: 1/5;
+}
+
 /* Navbar */
 nav {
     height: 4rem;
