--- a/client/src/style.css
+++ b/client/src/style.css
@@ -159,6 +159,11 @@ ul li {
     grid-column: 1/5;
 }
 
+.show-info {
+    border-bottom: 2px solid #2e2e2e;
+    padding: 1rem;
+}
+
 /* Navbar */
 nav {
     margin-bottom: 5rem;
