--- a/client/src/style.css
+++ b/client/src/style.css
@@ -122,7 +122,12 @@ input[type='email']:focus {
 ul li {
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: 0.75rem 1rem;
+    border-bottom: 2px solid #2e2e2e;
+}
+
+ul li:last-child {
+    border-bottom: none;
 }
 
 .edit-icon {
@@ -162,6 +167,10 @@ ul li {
 .show-info {
     border-bottom: 2px solid #2e2e2e;
     padding: 1rem;
+}
+
+.show-info:nth-last-child(-n + 4) {
+    border-bottom: none;
 }
 
 /* Navbar */
