--- a/client/src/style.css
+++ b/client/src/style.css
@@ -40,7 +40,7 @@ input[type='email']:focus {
 
 /* List Styling */
 .watched-list {
-    margin: 0 auto 5rem auto;
+    margin: 0 auto 4rem auto;
     width: 80%;
     border: 1px solid #0e0e0e;
     -webkit-box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.5);
@@ -119,7 +119,7 @@ input[type='email']:focus {
     color: #00aaff;
 }
 
-ul li {
+.movie-item {
     display: flex;
     justify-content: space-between;
     padding: 0.75rem 1rem;
@@ -175,7 +175,7 @@ ul li:last-child {
 
 /* Navbar */
 nav {
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
     height: 4rem;
     background-color: #282828;
     display: flex;
@@ -203,7 +203,6 @@ nav img {
 
 nav ul {
     display: flex;
-    align-items: center;
 }
 
 nav ul li {
@@ -214,6 +213,7 @@ nav ul li {
     color: #fff;
     font-weight: bold;
     transition: all 0.1s ease-in-out;
+    margin: 0 3rem 0 0;
 }
 
 nav ul li a {
