--- a/client/src/style.css
+++ b/client/src/style.css
@@ -89,23 +89,24 @@ input[type='email']:focus {
 }
 
 .list-form input[type='number'] {
+    width: 20%;
     text-align: center;
 }
 
 .list-form input[type='text'] {
-    flex: 8;
+    flex: 1;
+    width: 50%;
     padding: 0.25rem;
     font-size: 1.5rem;
 }
 
 .list-form input[type='number'] {
-    flex: 1;
     padding: 0.25rem;
     font-size: 1.5rem;
 }
 
 .list-form button {
-    flex: 2;
+    width: 10%;
     display: block;
     cursor: pointer;
     font-size: 1.5rem;
@@ -316,4 +317,30 @@ nav ul li a:hover {
 .alert.alert-danger {
     background-color: #d9534f;
     border: 2px solid #81302d;
+}
+
+/* Media Queries */
+@media (max-width: 715px) {
+    .watched-list {
+        width: 90%;
+    }
+
+    .form-container {
+        width: 80vw;
+    }
+
+    .form-group input[type='email'],
+    .form-group input[type='password'],
+    .form-group input[type='text'] {
+        width: 100%;
+    }
+
+    nav h1 {
+        font-size: 2rem;
+    }
+
+    nav ul li {
+        font-size: 1.25rem;
+        margin: 0 1rem 0 0;
+    }
 }
